# gamma-array

./: .gitignore  BUILD.md  CMakeLists.txt  CONTEXT.md  DEPENDENCIES.md  DEVELOPMENT.md  GITHUB_SPACES_CONTEXT.md  LICENSE  QUICKSTART.md  README.md  ddj_rev1_mapping.md  dev.ps1  imgui.ini  midi_log_20250912_151132.csv
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: CORE_APPLICATION_COMPLETE.md  NAVIGATION_BAR_COMPLETE.md
examples/: README.md
include/core/: Application.h
include/midi/: MidiManager.h
include/ui/: EffectsPanel.h  ImportPanel.h  MainContainer.h  MidiControlPanel.h  OutputPanel.h  TimelinePanel.h  WorkspaceManager.h  WorkspacePanel.h
scripts/: setup_dependencies.ps1  setup_dependencies_clean.ps1
src/: main.cpp
src/core/: Application.cpp
src/midi/: MidiManager.cpp
src/ui/: EffectsPanel.cpp  ImportPanel.cpp  MainContainer.cpp  MidiControlPanel.cpp  OutputPanel.cpp  TimelinePanel.cpp  WorkspaceManager.cpp  WorkspacePanel.cpp
